# netzkratzer

./: .gitignore  pyproject.toml  stage1-part1.py  stage1-part2.py  stage1-part3.py  stage2-part0.sh  stage2-part1.py
