[tool.poetry]
name = "netzkratzer"
version = "0.1.0"
description = ""
authors = ["Fabian Siegel <fabians1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
jedi = "^0.17.2"
rope = "^0.18.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
