[tool.poetry]
name = "netzkratzer"
version = "0.1.0"
description = ""
authors = ["Fabian Siegel <fabians1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.3"
selenium = "^3.141.0"
furl = "^2.1.0"
html5lib = "^1.1"
lxml = "^4.6.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
jedi = "^0.17.2"
rope = "^0.18.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120